--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
   </header>
   <main id="main">
     <div id="div1">
-      <p>MENSAJE</p>
+      <p id="option1">MENSAJE</p>
       <input type="number" id="numberSelected" placeholder="N°">
-      <p>CIFRADO</p>
+      <p id="option2">CIFRADO</p>
     </div>
     <form name="textform">
       <textarea name="block" id="first" cols="30" rows="10"></textarea>
@@ -47,9 +47,6 @@
       <button id="show2" type="button">&#x27AE </button>
     </div>
   </main>
-  <footer>
-
-  </footer>
   <script src="index.js" type="module"></script>
 </body>
 
