--- a/src/index.html
+++ b/src/index.html
@@ -37,15 +37,17 @@
       <p id="option2">CIFRADO</p>
     </div>
     <form name="textform">
-      <textarea name="block" id="first" cols="30" rows="10"></textarea>
+      <div id="container">
+        <textarea name="block" id="first" cols="30" rows="10"></textarea>
       <button id="change">&#x21C4 </button>
       <textarea name="block" id="second" cols="30" rows="10"></textarea>
+      </div>
+      <div id="div2">
+        <button id="clear" type="reset">&#x27F3</button>
+        <button id="show1" type="button">&#x27AE</button>
+        <button id="show2" type="button">&#x27AE </button>
+      </div>
     </form>
-    <div id="div2">
-      <button id="clear" type="button">&#x27F3</button>
-      <button id="show1" type="button">&#x27AE</button>
-      <button id="show2" type="button">&#x27AE </button>
-    </div>
   </main>
   <script src="index.js" type="module"></script>
 </body>
