--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,9 @@
     </div>
     <form name="textform">
       <div id="container">
-        <textarea name="block" id="first" cols="30" rows="10"></textarea>
+        <textarea name="block" id="first" cols="30" rows="10" placeholder="Coloca aquí tu texto"></textarea>
       <button id="change">&#x21C4 </button>
-      <textarea name="block" id="second" cols="30" rows="10"></textarea>
+      <textarea name="block" id="second" cols="30" rows="10" placeholder="Aquí estará tu resultado "></textarea>
       </div>
       <div id="div2">
         <button id="clear" type="reset">&#x27F3</button>
