--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
       <div id="div2">
         <button id="clear" type="reset">&#x27F3</button>
         <button id="show1" type="button">&#x27AE</button>
-        <button id="show2" type="button">&#x27AE </button>
+        <button id="show2" class='disappear' type="button">&#x27AE </button>
       </div>
     </form>
   </main>
