--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <title>Caesar Cipher</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -14,6 +14,7 @@
     <h2>Envia mensajes confidenciales o privados, con CITALK, deshazte de infiltrados</h2>
     <section>
       <h3>CÓMO FUNCIONA?</h3>
+      <p class='line'></p>
       <div id="instrucciones">
         <ul>
           <li class="order">1</li>
@@ -40,8 +41,8 @@
     <form name="textform">
       <div id="container">
         <textarea name="block" id="first" cols="30" rows="10" placeholder="Coloca aquí tu texto"></textarea>
-      <button id="change">&#x21C4 </button>
-      <textarea name="block" id="second" cols="30" rows="10" placeholder="Aquí estará tu resultado "></textarea>
+        <button id="change">&#x21C4 </button>
+        <textarea name="block" id="second" cols="30" rows="10" placeholder="Aquí estará tu resultado "></textarea>
       </div>
       <div id="div2">
         <button id="clear" type="reset">&#x27F3</button>
