--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Caesar Cipher</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -14,7 +13,7 @@
     <h2>Envia mensajes confidenciales o privados, con CITALK, deshazte de infiltrados</h2>
     <section>
       <h3>CÓMO FUNCIONA?</h3>
-      <p class='line'></p>
+      <p class="line"></p>
       <div id="instrucciones">
         <ul>
           <li class="order">1</li>
@@ -47,7 +46,7 @@
       <div id="div2">
         <button id="clear" type="reset">&#x27F3</button>
         <button id="show1" type="button">&#x27AE</button>
-        <button id="show2" class='disappear' type="button">&#x27AE </button>
+        <button id="show2" class="disappear" type="button">&#x27AE </button>
       </div>
     </form>
   </main>
