--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Caesar Cipher</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -40,17 +40,15 @@
     <form name="textform">
       <div id="container">
         <textarea name="block" id="first" cols="30" rows="10" placeholder="Coloca aquí tu texto"></textarea>
-        <button id="change">&#x21C4 </button>
+        <button id="change" type="button">&#x21C4 </button>
         <textarea name="block" id="second" cols="30" rows="10" placeholder="Aquí estará tu resultado "></textarea>
       </div>
       <div id="div2">
         <button id="clear" type="reset">&#x27F3</button>
         <button id="show1" type="button">&#x27AE</button>
-        <button id="show2" class="disappear" type="button">&#x27AE </button>
       </div>
     </form>
   </main>
   <script src="index.js" type="module"></script>
 </body>
-
 </html>
